# ai-biz-research

./: README.md
business-research-crew/: .gitignore  pyproject.toml  stablecoin_report_2025.md
business-research-crew/knowledge/: user_preference.txt
business-research-crew/src/business_research_crew/: main.py
business-research-crew/src/business_research_crew/config/: tasks.yaml
src/business_research_crew/: crew.py
src/business_research_crew/config/: agents.yaml
