[project]
name = "business-research-crew"
version = "0.1.0"
description = "business-research-crew using crewAI"
authors = [{ name = "João Rodrigo", email = "joaoroddias@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.0,<1.0.0"
]

[project.scripts]
business_research_crew = "business_research_crew.main:run"
run_crew = "business_research_crew.main:run"
train = "business_research_crew.main:train"
replay = "business_research_crew.main:replay"
test = "business_research_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
